Tests/Examples/bad/parse/lambda.lifp
// (lambda List Element)

(lambda)
(lambda ())

(lambda (non-list) el)
(lambda (too) much args)
